# browser_extension_test

./: .gitignore  PRIVACY.md  README.md  bigquery_catalog.sql  modal_app.py  pyproject.toml  test_fashion_clip.py
docs/: RELEASE.md
docs/superpowers/plans/: 2026-05-21-extension-results-redesign.md  2026-05-21-optional-target-crop.md  2026-05-21-results-frontend-filtering.md  2026-05-21-sellpy-visual-search-extension.md
docs/superpowers/specs/: 2026-05-20-sellpy-visual-search-extension-design.md  2026-05-21-extension-results-redesign-design.md  2026-05-21-optional-target-crop-design.md  2026-05-21-results-frontend-filtering-design.md
extension/: background.js  config.js  crop.js  lookup.js  manifest.json  results.css  results.html  results.js  results_filters.js  results_view.js
src/: catalog_query.py  embedding.py  similarity.py  types.py
src/sellpy_visual_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_crop.test.js  test_embedding_bytes.py  test_lookup.test.js  test_match.py  test_match_payload.py  test_results.test.js  test_results_filters.test.js  test_similarity.py
